[package]
name = "catpaw"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "catpaw"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]} 
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "*"
orao-solana-vrf = { version = "0.4.0", default-features = false, features = ["cpi"] }
